button fix on mobile finally?

--- a/style.css
+++ b/style.css
@@ -311,9 +311,9 @@ hr {
     margin-top: 5vh;
   }
 
-  button {
+  /* button {
     margin: 20px 0 0 20px;
-  }
+  } */
 }
 
 /* animations */
